# SHL

./: .gitignore  README.md  app.py  catalog.py  catalog_raw.txt  clean_catalog.json  clean_catalog.py  find_error.py  main.py  pyproject.toml  repair_catalog.py  requirements.txt  test_retrieval.py
services/: catalog_loader.py  chat_agent.py  embeddings.py  llm.py  retriever.py
